Added terraform validate code in the gh actions yaml

--- a/.github/workflows/action-terraform-verify.yml
+++ b/.github/workflows/action-terraform-verify.yml
@@ -47,6 +47,24 @@ jobs:
               fi
             fi
           done
+      - name: Validate terraform
+        run: set +e
+
+          echo "CHECK_STATUS=0" >> $GITHUB_ENV
+
+          for changed_file in ${{ steps.pr_files.outputs.added_modified }}; do
+            echo "Checking terraform validate on ${changed_file}..."
+
+            if [[ $changed_file == *.tf ]]; then
+              cd infrastructure && terraform validate
+              VALIDATE_STATUS=$(echo $?)
+
+              if [[ $VALIDATE_STATUS -ne 0 ]]; then
+                echo "❌ terraform validate failed -${changed_file}" >> $GITHUB_STEP_SUMMARY
+                echo "CHECK_STATUS=1" >> $GITHUB_ENV
+              fi
+            fi
+          done
       - name: Process check
         if: always()
         run: exit $CHECK_STATUS
