--- a/.github/workflows/action-terraform-verify.yml
+++ b/.github/workflows/action-terraform-verify.yml
@@ -48,7 +48,8 @@ jobs:
             fi
           done
       - name: Validate terraform
-        run: set +e
+        run: |
+          set +e
 
           echo "CHECK_STATUS=0" >> $GITHUB_ENV
 
